replace 1.5 method call
git-svn-id: https://svn.apache.org/repos/asf/jackrabbit/trunk@523229 13f79535-47bb-0310-9956-ffa450edef68